--- a/sandbox/styleguide/source/_layouts/page.html
+++ b/sandbox/styleguide/source/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
     </div>
   </aside>
   <main>
-    <div class="o-inset">
+    <div class="o-layout--article__inset">
       <article class="c-article">
         <header role="banner">
           <hgroup>
