--- a/sandbox/styleguide/source/styles/02-tools/_tools.rtl.scss
+++ b/sandbox/styleguide/source/styles/02-tools/_tools.rtl.scss
@@ -23,7 +23,7 @@
   }
 }
 
-@mixin margin($margin-top, $margin-right, $margin-bottom, $margin-left)
+@mixin mm-margin($margin-top, $margin-right, $margin-bottom, $margin-left)
 {
   margin-top: $margin-top;
   margin-right: $margin-right;
@@ -37,7 +37,7 @@
   }
 }
 
-@mixin padding($padding-top, $padding-right, $padding-bottom, $padding-left)
+@mixin mm-padding($padding-top, $padding-right, $padding-bottom, $padding-left)
 {
   padding-top: $padding-top;
   padding-right: $padding-right;
