--- a/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
+++ b/sandbox/styleguide/source/styles/02-tools/_tools.spacing.scss
@@ -15,9 +15,9 @@
 }
 
 @mixin paragraph-spacing {
-  @include margin(($font-leading--base + rem),0,0,0);
+  @include mm-margin(($font-leading--base + rem),0,0,0);
 }
 
 @mixin null-spacing {
-  @include margin(0,0,0,0);
+  @include mm-margin(0,0,0,0);
 }
