--- a/sandbox/styleguide/source/styles/04-elements/_elements.table.scss
+++ b/sandbox/styleguide/source/styles/04-elements/_elements.table.scss
@@ -13,7 +13,7 @@ table {
   th,
   td {
     @include font-size(small,tight);
-    @include padding(($font-leading--tight/2 + rem),($gutter/2 + rem),($font-leading--tight/2 + rem),($gutter/2 + rem));
+    @include mm-padding(($font-leading--tight/2 + rem),($gutter/2 + rem),($font-leading--tight/2 + rem),($gutter/2 + rem));
     @include text-align(left);
   }
 
