--- a/sandbox/styleguide/source/_layouts/post.html
+++ b/sandbox/styleguide/source/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     </div>
   </aside>
   <main>
-    <div class="o-inset">
+    <div class="o-layout--article__inset">
       <article class="c-article" itemscope itemtype="http://schema.org/BlogPosting">
         <header role="banner">
           <h1 itemprop="name headline">
