WIP: stashing work

--- a/sandbox/styleguide/source/styles/boltdesignsystem.com.scss
+++ b/sandbox/styleguide/source/styles/boltdesignsystem.com.scss
@@ -27,26 +27,31 @@
 @import '@bolt/elements-all';
 @import '04-elements/elements.all';
 
+//
+// /* ------------------------------------ *\
+//   Objects
+// \* ------------------------------------ */
+// @import '05-objects/objects.all';
+//
+//
+// /* ------------------------------------ *\
+//   Components
+// \* ------------------------------------ */
+// @import '06-components/components.all';
+//
+//
+// /* ------------------------------------ *\
+//   Themes
+// \* ------------------------------------ */
+// @import '07-themes/themes.all';
+//
+//
+// /* ------------------------------------ *\
+//   Utilities
+// \* ------------------------------------ */
+// @import '08-utilities/utilities.all';
 
-/* ------------------------------------ *\
-  Objects
-\* ------------------------------------ */
-@import '05-objects/objects.all';
-
-
-/* ------------------------------------ *\
-  Components
-\* ------------------------------------ */
-@import '06-components/components.all';
-
-
-/* ------------------------------------ *\
-  Themes
-\* ------------------------------------ */
-@import '07-themes/themes.all';
-
-
-/* ------------------------------------ *\
-  Utilities
-\* ------------------------------------ */
-@import '08-utilities/utilities.all';
+//
+// .testing {
+//   @include margin(medium 10px);
+// }
