--- a/packages/bolt-core/02-tools/tools-all.scss
+++ b/packages/bolt-core/02-tools/tools-all.scss
@@ -9,3 +9,4 @@
 @import '@bolt/tools-sassy-maps';
 @import '@bolt/tools-font-kerning';
 @import '@bolt/tools-spacing';
+@import '@bolt/tools-color-palette';
