--- a/packages/bolt-core/01-settings/settings-all.scss
+++ b/packages/bolt-core/01-settings/settings-all.scss
@@ -4,3 +4,4 @@
 @import '@bolt/settings-font-size';
 @import '@bolt/settings-font-weight';
 @import '@bolt/settings-spacing';
+@import '@bolt/settings-colors';
